// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/clients/list/ClientList renders correctly 1`] = `
<ClientList
  clientsArray={
    Array [
      Object {
        "_id": "9b67a82d-dac7-40c0-85aa-e5976339a6b6",
        "_rev": "v1",
        "addresses": Array [
          Object {
            "addressFields": null,
            "addressType": "",
            "cityVillage": "Tha Luang",
            "country": null,
            "countyDistrict": null,
            "endDate": null,
            "geopoint": null,
            "latitude": null,
            "longitude": null,
            "postalCode": null,
            "preferred": null,
            "startDate": null,
            "stateProvince": null,
            "subDistrict": null,
            "subTown": null,
            "town": null,
          },
        ],
        "attributes": Object {
          "residence": "da765947-5e4d-49f7-9eb8-2d2d00681f65",
        },
        "baseEntityId": "71ad460c-bf76-414e-9be1-0d1b2cb1bce8",
        "birthdate": 7200000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557670951023,
        "deathdateApprox": false,
        "firstName": "Khumpai",
        "gender": "Male",
        "identifiers": Object {
          "opensrp_id": "11096120_family",
        },
        "lastName": "Family",
        "relationships": Object {
          "family_head": Array [
            "7d97182f-d623-4553-8651-5a29d2fe3f0b",
          ],
          "primary_caregiver": Array [
            "7d97182f-d623-4553-8651-5a29d2fe3f0b",
          ],
        },
        "serverVersion": 1557670950986,
        "type": "Client",
      },
      Object {
        "_id": "a30116d5-0612-419e-9b93-00c87df4ffbb",
        "_rev": "v1",
        "addresses": Array [],
        "attributes": Object {
          "residence": "da765947-5e4d-49f7-9eb8-2d2d00681f65",
        },
        "baseEntityId": "7d97182f-d623-4553-8651-5a29d2fe3f0b",
        "birthdate": 594777600000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557670951165,
        "deathdateApprox": false,
        "firstName": "Pramoj",
        "identifiers": Object {
          "opensrp_id": "11096120",
        },
        "lastName": "Khumpai",
        "middleName": "",
        "relationships": Object {
          "family": Array [
            "71ad460c-bf76-414e-9be1-0d1b2cb1bce8",
          ],
        },
        "serverVersion": 1557670950999,
        "type": "Client",
      },
      Object {
        "_id": "b23307c2-cbbb-481f-9cd7-f218564cc4bc",
        "_rev": "v1",
        "addresses": Array [
          Object {
            "addressFields": null,
            "addressType": "",
            "cityVillage": "Tha Luang",
            "country": null,
            "countyDistrict": null,
            "endDate": null,
            "geopoint": null,
            "latitude": null,
            "longitude": null,
            "postalCode": null,
            "preferred": null,
            "startDate": null,
            "stateProvince": null,
            "subDistrict": null,
            "subTown": null,
            "town": null,
          },
        ],
        "attributes": Object {
          "residence": "bd73f7d7-4387-4b6b-b632-acb03c4ea160",
        },
        "baseEntityId": "e540ac0e-d913-4898-846a-d3ee31863182",
        "birthdate": 7200000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557672169407,
        "deathdateApprox": false,
        "firstName": "Sepsook",
        "gender": "Male",
        "identifiers": Object {
          "opensrp_id": "11099629_family",
        },
        "lastName": "Family",
        "relationships": Object {
          "family_head": Array [
            "aaaca36a-a913-466b-9dd7-0c68db0f7c6f",
          ],
          "primary_caregiver": Array [
            "aaaca36a-a913-466b-9dd7-0c68db0f7c6f",
          ],
        },
        "serverVersion": 1557672169404,
        "type": "Client",
      },
      Object {
        "_id": "e5929901-9377-413c-850c-e41b48b34d5f",
        "_rev": "v1",
        "addresses": Array [],
        "attributes": Object {
          "residence": "bd73f7d7-4387-4b6b-b632-acb03c4ea160",
        },
        "baseEntityId": "aaaca36a-a913-466b-9dd7-0c68db0f7c6f",
        "birthdate": 868320000000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557672169419,
        "deathdateApprox": false,
        "firstName": "Udom",
        "identifiers": Object {
          "opensrp_id": "11099629",
        },
        "lastName": "Sepsook",
        "middleName": "",
        "relationships": Object {
          "family": Array [
            "e540ac0e-d913-4898-846a-d3ee31863182",
          ],
        },
        "serverVersion": 1557672169404,
        "type": "Client",
      },
      Object {
        "_id": "faa436bb-0aa5-4c5f-a2fe-be687e164205",
        "_rev": "v1",
        "addresses": Array [],
        "attributes": Object {
          "residence": "6f7ca772-b368-4c3d-bd9c-00aa698203ca",
        },
        "baseEntityId": "630739be-e0ba-4f28-a5e7-96d4960fe1a2",
        "birthdate": 1463097600000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557737485545,
        "deathdateApprox": false,
        "firstName": "Imalda",
        "gender": "Female",
        "identifiers": Object {
          "opensrp_id": "11117132",
        },
        "lastName": "DANE",
        "middleName": "",
        "relationships": Object {
          "family": Array [
            "97231120-8715-4131-b472-f71ecf230730",
          ],
        },
        "serverVersion": 1557737485527,
        "type": "Client",
      },
      Object {
        "_id": "0a5457f9-3e2e-4432-afae-75b57251651a",
        "_rev": "v1",
        "addresses": Array [
          Object {
            "addressFields": Object {
              "address2": "3",
              "street": "no street",
            },
            "addressType": "",
            "cityVillage": "where ever I am ",
            "country": null,
            "countyDistrict": null,
            "endDate": null,
            "geopoint": null,
            "latitude": null,
            "longitude": null,
            "postalCode": null,
            "preferred": null,
            "startDate": null,
            "stateProvince": null,
            "subDistrict": null,
            "subTown": null,
            "town": null,
          },
        ],
        "attributes": Object {
          "residence": "6f7ca772-b368-4c3d-bd9c-00aa698203ca",
        },
        "baseEntityId": "97231120-8715-4131-b472-f71ecf230730",
        "birthdate": 7200000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557737728445,
        "deathdateApprox": false,
        "firstName": "DANE",
        "gender": "Male",
        "identifiers": Object {
          "opensrp_id": "11117124_family",
        },
        "lastName": "Family",
        "relationships": Object {
          "family_head": Array [
            "945fc98d-4cce-412a-8327-ca2315efedf3",
          ],
          "primary_caregiver": Array [
            "945fc98d-4cce-412a-8327-ca2315efedf3",
          ],
        },
        "serverVersion": 1557737728441,
        "type": "Client",
      },
      Object {
        "_id": "6dab682a-0f31-4935-9114-c4d33d148617",
        "_rev": "v1",
        "addresses": Array [],
        "attributes": Object {
          "residence": "6f7ca772-b368-4c3d-bd9c-00aa698203ca",
        },
        "baseEntityId": "945fc98d-4cce-412a-8327-ca2315efedf3",
        "birthdate": 358560000000,
        "birthdateApprox": false,
        "clientApplicationVersion": 2,
        "clientDatabaseVersion": 2,
        "dateCreated": 1557737728487,
        "deathdateApprox": false,
        "firstName": "Peter",
        "identifiers": Object {
          "opensrp_id": "11117124",
        },
        "lastName": "DANE",
        "middleName": "",
        "relationships": Object {
          "family": Array [
            "97231120-8715-4131-b472-f71ecf230730",
          ],
        },
        "serverVersion": 1557737728441,
        "type": "Client",
      },
    ]
  }
  fetchClientsActionCreator={[MockFunction]}
  location={[MockFunction]}
  match={[MockFunction]}
  opensrpService={
    [MockFunction] {
      "calls": Array [
        Array [
          "client/search",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  removeClients={[Function]}
  setTotalRecords={[Function]}
  totalRecords={0}
>
  <Ripple
    borderColor="#ff5d00"
    borderStyle="solid"
    borderWidth="4px"
    height="64px"
    minHeight="80vh"
    width="64px"
  >
    <div
      className="lds-ripple-parent"
      style={
        Object {
          "minHeight": "80vh",
        }
      }
    >
      <div
        className="lds-ripple"
        style={
          Object {
            "height": "64px",
            "width": "64px",
          }
        }
      >
        <div
          style={
            Object {
              "borderColor": "#ff5d00",
              "borderStyle": "solid",
              "borderWidth": "4px",
            }
          }
        />
        <div
          style={
            Object {
              "borderColor": "#ff5d00",
              "borderStyle": "solid",
              "borderWidth": "4px",
            }
          }
        />
      </div>
    </div>
  </Ripple>
</ClientList>
`;

exports[`containers/clients/list/ClientList renders correctly when clientsArray is an empty array: Ripple Loader 1`] = `
<Ripple
  borderColor="#ff5d00"
  borderStyle="solid"
  borderWidth="4px"
  height="64px"
  minHeight="80vh"
  width="64px"
>
  <div
    className="lds-ripple-parent"
    style={
      Object {
        "minHeight": "80vh",
      }
    }
  >
    <div
      className="lds-ripple"
      style={
        Object {
          "height": "64px",
          "width": "64px",
        }
      }
    >
      <div
        style={
          Object {
            "borderColor": "#ff5d00",
            "borderStyle": "solid",
            "borderWidth": "4px",
          }
        }
      />
      <div
        style={
          Object {
            "borderColor": "#ff5d00",
            "borderStyle": "solid",
            "borderWidth": "4px",
          }
        }
      />
    </div>
  </div>
</Ripple>
`;

exports[`containers/clients/list/ClientList works correctly with the redux store 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(ClientList)
    fetchClientsActionCreator={[MockFunction]}
    location={[MockFunction]}
    match={[MockFunction]}
    opensrpService={
      [MockFunction] {
        "calls": Array [
          Array [
            "client/search",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <ClientList
      clientsArray={
        Array [
          Object {
            "_id": "9b67a82d-dac7-40c0-85aa-e5976339a6b6",
            "_rev": "v1",
            "addresses": Array [
              Object {
                "addressFields": null,
                "addressType": "",
                "cityVillage": "Tha Luang",
                "country": null,
                "countyDistrict": null,
                "endDate": null,
                "geopoint": null,
                "latitude": null,
                "longitude": null,
                "postalCode": null,
                "preferred": null,
                "startDate": null,
                "stateProvince": null,
                "subDistrict": null,
                "subTown": null,
                "town": null,
              },
            ],
            "attributes": Object {
              "residence": "da765947-5e4d-49f7-9eb8-2d2d00681f65",
            },
            "baseEntityId": "71ad460c-bf76-414e-9be1-0d1b2cb1bce8",
            "birthdate": 7200000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557670951023,
            "deathdateApprox": false,
            "firstName": "Khumpai",
            "gender": "Male",
            "identifiers": Object {
              "opensrp_id": "11096120_family",
            },
            "lastName": "Family",
            "relationships": Object {
              "family_head": Array [
                "7d97182f-d623-4553-8651-5a29d2fe3f0b",
              ],
              "primary_caregiver": Array [
                "7d97182f-d623-4553-8651-5a29d2fe3f0b",
              ],
            },
            "serverVersion": 1557670950986,
            "type": "Client",
          },
          Object {
            "_id": "a30116d5-0612-419e-9b93-00c87df4ffbb",
            "_rev": "v1",
            "addresses": Array [],
            "attributes": Object {
              "residence": "da765947-5e4d-49f7-9eb8-2d2d00681f65",
            },
            "baseEntityId": "7d97182f-d623-4553-8651-5a29d2fe3f0b",
            "birthdate": 594777600000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557670951165,
            "deathdateApprox": false,
            "firstName": "Pramoj",
            "identifiers": Object {
              "opensrp_id": "11096120",
            },
            "lastName": "Khumpai",
            "middleName": "",
            "relationships": Object {
              "family": Array [
                "71ad460c-bf76-414e-9be1-0d1b2cb1bce8",
              ],
            },
            "serverVersion": 1557670950999,
            "type": "Client",
          },
          Object {
            "_id": "b23307c2-cbbb-481f-9cd7-f218564cc4bc",
            "_rev": "v1",
            "addresses": Array [
              Object {
                "addressFields": null,
                "addressType": "",
                "cityVillage": "Tha Luang",
                "country": null,
                "countyDistrict": null,
                "endDate": null,
                "geopoint": null,
                "latitude": null,
                "longitude": null,
                "postalCode": null,
                "preferred": null,
                "startDate": null,
                "stateProvince": null,
                "subDistrict": null,
                "subTown": null,
                "town": null,
              },
            ],
            "attributes": Object {
              "residence": "bd73f7d7-4387-4b6b-b632-acb03c4ea160",
            },
            "baseEntityId": "e540ac0e-d913-4898-846a-d3ee31863182",
            "birthdate": 7200000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557672169407,
            "deathdateApprox": false,
            "firstName": "Sepsook",
            "gender": "Male",
            "identifiers": Object {
              "opensrp_id": "11099629_family",
            },
            "lastName": "Family",
            "relationships": Object {
              "family_head": Array [
                "aaaca36a-a913-466b-9dd7-0c68db0f7c6f",
              ],
              "primary_caregiver": Array [
                "aaaca36a-a913-466b-9dd7-0c68db0f7c6f",
              ],
            },
            "serverVersion": 1557672169404,
            "type": "Client",
          },
          Object {
            "_id": "e5929901-9377-413c-850c-e41b48b34d5f",
            "_rev": "v1",
            "addresses": Array [],
            "attributes": Object {
              "residence": "bd73f7d7-4387-4b6b-b632-acb03c4ea160",
            },
            "baseEntityId": "aaaca36a-a913-466b-9dd7-0c68db0f7c6f",
            "birthdate": 868320000000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557672169419,
            "deathdateApprox": false,
            "firstName": "Udom",
            "identifiers": Object {
              "opensrp_id": "11099629",
            },
            "lastName": "Sepsook",
            "middleName": "",
            "relationships": Object {
              "family": Array [
                "e540ac0e-d913-4898-846a-d3ee31863182",
              ],
            },
            "serverVersion": 1557672169404,
            "type": "Client",
          },
          Object {
            "_id": "faa436bb-0aa5-4c5f-a2fe-be687e164205",
            "_rev": "v1",
            "addresses": Array [],
            "attributes": Object {
              "residence": "6f7ca772-b368-4c3d-bd9c-00aa698203ca",
            },
            "baseEntityId": "630739be-e0ba-4f28-a5e7-96d4960fe1a2",
            "birthdate": 1463097600000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557737485545,
            "deathdateApprox": false,
            "firstName": "Imalda",
            "gender": "Female",
            "identifiers": Object {
              "opensrp_id": "11117132",
            },
            "lastName": "DANE",
            "middleName": "",
            "relationships": Object {
              "family": Array [
                "97231120-8715-4131-b472-f71ecf230730",
              ],
            },
            "serverVersion": 1557737485527,
            "type": "Client",
          },
          Object {
            "_id": "0a5457f9-3e2e-4432-afae-75b57251651a",
            "_rev": "v1",
            "addresses": Array [
              Object {
                "addressFields": Object {
                  "address2": "3",
                  "street": "no street",
                },
                "addressType": "",
                "cityVillage": "where ever I am ",
                "country": null,
                "countyDistrict": null,
                "endDate": null,
                "geopoint": null,
                "latitude": null,
                "longitude": null,
                "postalCode": null,
                "preferred": null,
                "startDate": null,
                "stateProvince": null,
                "subDistrict": null,
                "subTown": null,
                "town": null,
              },
            ],
            "attributes": Object {
              "residence": "6f7ca772-b368-4c3d-bd9c-00aa698203ca",
            },
            "baseEntityId": "97231120-8715-4131-b472-f71ecf230730",
            "birthdate": 7200000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557737728445,
            "deathdateApprox": false,
            "firstName": "DANE",
            "gender": "Male",
            "identifiers": Object {
              "opensrp_id": "11117124_family",
            },
            "lastName": "Family",
            "relationships": Object {
              "family_head": Array [
                "945fc98d-4cce-412a-8327-ca2315efedf3",
              ],
              "primary_caregiver": Array [
                "945fc98d-4cce-412a-8327-ca2315efedf3",
              ],
            },
            "serverVersion": 1557737728441,
            "type": "Client",
          },
          Object {
            "_id": "6dab682a-0f31-4935-9114-c4d33d148617",
            "_rev": "v1",
            "addresses": Array [],
            "attributes": Object {
              "residence": "6f7ca772-b368-4c3d-bd9c-00aa698203ca",
            },
            "baseEntityId": "945fc98d-4cce-412a-8327-ca2315efedf3",
            "birthdate": 358560000000,
            "birthdateApprox": false,
            "clientApplicationVersion": 2,
            "clientDatabaseVersion": 2,
            "dateCreated": 1557737728487,
            "deathdateApprox": false,
            "firstName": "Peter",
            "identifiers": Object {
              "opensrp_id": "11117124",
            },
            "lastName": "DANE",
            "middleName": "",
            "relationships": Object {
              "family": Array [
                "97231120-8715-4131-b472-f71ecf230730",
              ],
            },
            "serverVersion": 1557737728441,
            "type": "Client",
          },
        ]
      }
      fetchClientsActionCreator={[Function]}
      getTotalRecords={[Function]}
      location={[MockFunction]}
      match={[MockFunction]}
      opensrpService={
        [MockFunction] {
          "calls": Array [
            Array [
              "https://test.smartregister.org/opensrp/rest/",
              "client/search",
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      removeClients={[Function]}
      setTotalRecords={[Function]}
      totalRecords={0}
    >
      <Ripple
        borderColor="#ff5d00"
        borderStyle="solid"
        borderWidth="4px"
        height="64px"
        minHeight="80vh"
        width="64px"
      >
        <div
          className="lds-ripple-parent"
          style={
            Object {
              "minHeight": "80vh",
            }
          }
        >
          <div
            className="lds-ripple"
            style={
              Object {
                "height": "64px",
                "width": "64px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderColor": "#ff5d00",
                  "borderStyle": "solid",
                  "borderWidth": "4px",
                }
              }
            />
            <div
              style={
                Object {
                  "borderColor": "#ff5d00",
                  "borderStyle": "solid",
                  "borderWidth": "4px",
                }
              }
            />
          </div>
        </div>
      </Ripple>
    </ClientList>
  </Connect(ClientList)>
  );
</Provider>
`;
